--- a/src/gcintranet/appTop.ejs
+++ b/src/gcintranet/appTop.ejs
@@ -16,6 +16,36 @@
  * @param? topSecMenu Set to true if you want to use the secondary navigation.
  * @param? GCToolsModal Used to turn the GCTools links into a modal.
 -%>
+<%_
+// The following parameters are pre-configured for users using a specific sub-theme.
+if (pr.subTheme === 'eccc') {
+    pr.GCToolsModal = true;
+    if (pr.intranetTitle == null) pr.intranetTitle = [{
+        "href": "<^- msg('https://intranet.ec.gc.ca/default.asp?lang=En') ^>",
+        "text": " Intranet",
+        "boldText" : "ECCC"
+    }];
+    if (pr.customSearch == null) pr.customSearch = [{
+        "action" : "<^- msg('https://intranet.ec.gc.ca/default.asp?lang=en&n=F7CAD023-1') ^>",
+        "placeholder" : "<^- msg('Search ECCC intranet') ^>",
+        "method" : "get",
+        "hiddenInput" : [{ "name" : "lang", "id" : "lang", "value" : "<^- msg('en') ^>"}, { "name" : "n", "id" : "n", "value" : "F7CAD023-1"}, { "name" : "xsl", "id" : "xsl", "value" : "idolsearchguirenderer,result"}, { "name" : "xml", "id" : "xml", "value" : "F7CAD023-E332-4264-9BE3-0D07260E64CC"}, { "name" : "searchoffset", "id" : "searchoffset", "value" : "1"}, { "name" : "searchfunction", "id" : "searchfunction", "value" : "basicsearch"}, { "name" : "language", "id" : "language", "value" : "<^- msg('en') ^>"}]
+    }]
+} else if (pr.subTheme === 'esdc' || pr.subTheme === 'labour') {
+    pr.GCToolsModal = true;
+    if (pr.intranetTitle == null) pr.intranetTitle = [{
+        "href": "<^- msg('https://esdc.prv/en/index.shtml') ^>",
+        "text": " Intranet",
+        "boldText" : (pr.subTheme === 'esdc')? "<^- msg('ESDC/SC') ^>" : "<^- msg('Labour Program') ^>",
+        "acronym": "<^- msg('Employment and Social Development Canada / Service Canada') ^>"
+	}];
+    if (pr.customSearch == null) pr.customSearch =[{
+        "action" : "https://esdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx",
+        "placeholder" : "<^- msg('Search the Intranet') ^>",
+        "method" : "get",
+        "hiddenInput" : [{ "name" : "k", "value" : "<^- msg('en') ^>"}, { "name" : "l", "value" : "<^- msg('eng') ^>"}, { "name" : "chk2", "value" : "True"}]
+    }]
+} -%>
 <nav aria-label="<^- msg('Skip Links') ^>">
     <ul id="wb-tphp">
         <li class="wb-slc"><a class="wb-sl" href="#wb-cont"><^- msg('Skip to main content') ^></a></li>
