--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -12,6 +12,8 @@
  * @param? menuLinks Loops of the menu sections - MSCA only
  * @param? breadcrumbs Used to set custom breadcrumbs.
  * @param? showPreContent Used to determine if the precontent space will be displayed.
+ * @param? infoBanner Used to show an information banner on top of the page
+
 -%>
 <nav aria-label="<^- msg('Skip Links') ^>">
     <ul id="wb-tphp">
@@ -21,6 +23,27 @@
             <li class="wb-slc visible-md visible-lg"><a class="wb-sl" href="#wb-sec"><^- msg('Skip to section menu') ^></a></li>
         <%_ } -%>
     </ul>
+    <%_ if (pr.infoBanner != null) { -%>
+        <%_ const banner=pr.infoBanner[0]; -%>
+        <%_ if (banner.showBanner == true) { -%>
+            <section class="banner-color">
+                <div class="container">
+                    <p class="banner-text"><b><%= banner.boldText %></b><%= banner.mainText %></p>
+                    <div id="banner-container-div" class="<%_ if (banner.button == null) { -%>banner-margin-bottom<%_ } -%>">
+                        <%_ if (banner.link != null) { -%>
+                            <%_ const link=banner.link[0]; -%>
+                            <a class="banner-link" href="<%- link.href %>"><%= link.text %></a>
+                            <i class="fa fa-external-link banner-external-icon" aria-hidden="true"></i>
+                        <%_ } -%>
+                        <%_ if (banner.button != null) { -%>
+                            <%_ const button=banner.button[0]; -%>
+                            <button class="banner-button btn-primary" type="button" href="<%- button.href %>"><%= button.text %></button>
+                        <%_ } -%>
+                    </div>
+                </div>
+            </section>
+        <%_ } -%>
+    <%_ } -%>
 </nav>
 <header>
     <div id="wb-bnr" class="container">
